  they are re-used without the properties
o Added the traversal matcher, which uses the new traversal framework abilities to do
  pattern matching. It should provide for nice performance benefits for a lot of queries.
o Fixed #866: Changed the LRU cache to make it safe to use concurrently, and made the parser single threaded


1.8.RC1 (2012-09-05)
--------------------
o Removed the /../ literal for regular expressions. Now a normal string literal is used instead
o Concatenation handles types better
o Changed how the graph-matching module is used, to make it safe for concurrent use
o Better type error messages
o Renamed iterable to collection
o Fixed #795: so that WITH keeps parameters also for empty aggregation results
o Fixed #772: Creating nodes/relationships goes before SET, so SET can run on already created elements
o Added error when using != instead of <>
o Fixed #787: Issue when comparing array properties with literal collections
o Fixed #751: Better error message for some type errors
o Fixed #818: Problem where properties could only have scalar values (they can be arrays as well)
o Fixed #834: Gives relevant syntax exception when properties are entered in MATCH

1.8.M07 (2012-08-08)
--------------------
o Added escape characters to string literals
o Renamed `RELATE` to `CREATE UNIQUE`

1.8.M06 (2012-07-06)
--------------------
o Fixes problem when graph elements are deleted multiple times in the same query
o Fixes #625: Values passed through WITH have the wrong type
o Fixes #654: Some paths are returned the wrong way

1.8.M05 (2012-06-21)
--------------------
o CREATE and RELATE can now introduce path identifiers
o Fixes #600: Double optional with no matching relationships returns too many rows
o Fixes #613: Missing dependencies not reported correctly for queries with RELATE/SET/DELETE
o String literals can now contain escape characters

1.8.M04 (2012-06-07)
--------------------
o CREATE now accepts full paths and not only single nodes and relationships